--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masonry Design</title>
-    <link rel="icon" type="image/png" href="images/aesthetic-1.jpg">
+    <link rel="icon" type="image/png" href="images/channel-pic.png">
     <link rel="stylesheet" href="masonry-design.css">
     <script src="masonry-design.js"></script>
 </head>
